; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_clone.c_checkout_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_clone.c_checkout_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i8*, i8*)* @checkout_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_branch(i32* %0, i32* %1, i32* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %5
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @git_remote_name(i32* %16)
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @update_head_to_branch(i32* %15, i32 %17, i8* %18, i8* %19)
  store i32 %20, i32* %11, align 4
  br label %26

21:                                               ; preds = %5
  %22 = load i32*, i32** %6, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = call i32 @update_head_to_remote(i32* %22, i32* %23, i8* %24)
  store i32 %25, i32* %11, align 4
  br label %26

26:                                               ; preds = %21, %14
  %27 = load i32, i32* %11, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %40, label %29

29:                                               ; preds = %26
  %30 = load i32*, i32** %6, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @git_repository_is_bare(i32* %31)
  %33 = load i32*, i32** %8, align 8
  %34 = call i64 @should_checkout(i32* %30, i32 %32, i32* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %29
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @git_checkout_head(i32* %37, i32* %38)
  store i32 %39, i32* %11, align 4
  br label %40

40:                                               ; preds = %36, %29, %26
  %41 = load i32, i32* %11, align 4
  ret i32 %41
}

declare dso_local i32 @update_head_to_branch(i32*, i32, i8*, i8*) #1

declare dso_local i32 @git_remote_name(i32*) #1

declare dso_local i32 @update_head_to_remote(i32*, i32*, i8*) #1

declare dso_local i64 @should_checkout(i32*, i32, i32*) #1

declare dso_local i32 @git_repository_is_bare(i32*) #1

declare dso_local i32 @git_checkout_head(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
